--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -27,3 +27,4 @@ $default-font-size: 1.6rem;
 $grid-width: 114rem;
 $gutter-vertical: 6rem;
 $gutter-horizontal: 8rem;
+$gutter-horizontal-small: 6rem;
