--- a/sass/layouts/_grid.scss
+++ b/sass/layouts/_grid.scss
@@ -2,8 +2,17 @@
   max-width: $grid-width;
   margin: 0 auto;
 
+  @include respond(tab-potrait) {
+    max-width: 50rem;
+    padding: 0 3rem;
+  }
+
   &:not(:last-child) {
     margin-bottom: $gutter-horizontal;
+
+    @include respond(tab-potrait) {
+      margin-bottom: $gutter-horizontal-small;
+    }
   }
 
   @include clearfix;
@@ -13,6 +22,15 @@
 
     &:not(:last-child) {
       margin-right: $gutter-vertical;
+
+      @include respond(tab-potrait) {
+        margin-right: 0;
+        margin-bottom: $gutter-horizontal-small;
+      }
+    }
+
+    @include respond(tab-potrait) {
+      width: 100% !important;
     }
   }
 
