--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,7 +3,6 @@ body {
   font-weight: 400;
   color: $color-grey-text;
   line-height: 1.7;
-  padding: 3rem;
 }
 
 .heading-primary {
@@ -19,6 +18,11 @@ body {
     font-weight: 400;
     letter-spacing: 3.5rem;
     animation: moveInLeft 1s ease-out;
+
+    @include respond(phone) {
+      font-size: 5rem;
+      letter-spacing: 1rem;
+    }
   }
 
   &--sub {
@@ -27,6 +31,11 @@ body {
     font-weight: 700;
     letter-spacing: 1.74rem;
     animation: moveInRight 1s ease-out;
+
+    @include respond(phone) {
+      font-size: 1.5rem;
+      letter-spacing: .5rem;
+    }
   }
 }
 
@@ -45,6 +54,14 @@ body {
   text-transform: uppercase;
   letter-spacing: 0.2rem;
   transition: all 0.2s;
+
+  @include respond(tab-potrait) {
+    font-size: 3rem;
+  }
+
+  @include respond(phone) {
+    font-size: 2.5rem;
+  }
 
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
