--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -7,9 +7,17 @@
 }
 .u-margin-bottom-md {
   margin-bottom: 4rem !important;
+
+  @include respond(tab-potrait) {
+    margin-bottom: 3rem !important;
+  }
 }
 .u-margin-bottom-lg {
   margin-bottom: 8rem !important;
+
+  @include respond(tab-potrait) {
+    margin-bottom: 4rem !important;
+  }
 }
 
 .u-margin-top-lg {
