--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -8,6 +8,10 @@
   transition: transform 0.2s;
   backface-visibility: hidden;
 
+  @include respond(tab-potrait) {
+    padding: 2rem;
+  }
+
   &__icon {
     font-size: 6rem;
     margin-bottom: 0.5rem;
@@ -20,6 +24,10 @@
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
+
+    @include respond(tab-potrait) {
+      margin-bottom: 0;
+    }
   }
 
   &:hover {
