--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -17,6 +17,10 @@
         background-color: rgba($color-white, .5);
         transition: all .3s;
 
+        @include respond(tab-potrait) {
+            width: 100%;
+        }
+
         &:focus {
             outline: none;
             border-bottom: 3px solid $color-primary;
@@ -51,6 +55,11 @@
     &__group-radio {
         width: 49%;
         display: inline-block;
+
+        @include respond(tab-potrait) {
+            width: 100%;
+            margin-bottom: 2rem;
+        }
     }
 
     &__radio-input {
