--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -4,9 +4,17 @@
     font-size: 1.4rem;
     color: $color-grey-light-2;
 
+    @include respond(tab-potrait) {
+        padding: 8rem 0;
+    }
+
     &__logo-box {
         text-align: center;
         margin-bottom: 8rem;
+
+        @include respond(tab-potrait) {
+            margin-bottom: 6rem; 
+        }
     }
 
     &__logo {
@@ -19,6 +27,11 @@
         border-top: 1px solid $color-grey-text-2;
         padding-top: 2rem;
         display: inline-block;
+
+        @include respond(tab-potrait) {
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &__list {
@@ -56,5 +69,11 @@
         padding-top: 2rem;
         width: 80%;
         float: right;
+
+        @include respond(tab-potrait) {
+            width: 100%;
+            text-align: center;
+            float: none;
+        }
     }
 }
