--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,10 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0;
   margin-top: -20vh;
+
+  @include respond(tab-potrait) {
+    padding: 20rem 0;
+  }
 }
 
 .section-features {
@@ -18,22 +22,38 @@
   & > * {
     transform: skewY(7deg);
   }
+
+  @include respond(tab-potrait) {
+    padding: 10rem 0;
+  }
 }
 
 .section-tours {
   background-color: $color-grey-light-1;
   padding: 25rem 0 15rem;
   margin-top: -10rem;
+
+  @include respond(tab-potrait) {
+    padding: 20rem 0 10rem;
+  }
 }
 
 .section-stories {
   position: relative;
   padding: 15rem 0;
+
+  @include respond(tab-potrait) {
+    padding: 10rem 0;
+  }
 }
 
 .section-book {
   padding: 15rem 0;
   background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+
+  @include respond(tab-potrait) {
+    padding: 15rem 0;
+  }
 }
 
 .book {
@@ -47,10 +67,34 @@
   background-size: 100%;
   box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
   border-radius: 3px;
-  height: 50rem;
+
+
+  @include respond(tab-landscape) {
+    background-image: linear-gradient(105deg, 
+    rgba($color-white, .9) 0%,
+    rgba($color-white, .9) 65%,
+    transparent 65%) ,
+url(../img/nat-10.jpg);
+    background-size: cover;
+}
+
+@include respond(tab-potrait) {
+    background-image: linear-gradient(to right, 
+    rgba($color-white, .9) 0%,
+    rgba($color-white, .9) 100%),
+url(../img/nat-10.jpg);
+}
 
   &__form {
     width: 50%;
     padding: 6rem;
+
+    @include respond(tab-landscape) {
+      width: 65%;
+  }
+
+  @include respond(tab-potrait) {
+      width: 100%;
+  }
   }
 }
